# SANDI_python_toolbox

./: LICENSE  README.md  README.rst  pipeline_description.json  pyproject.toml  setup.py
SANDI_python_toolbox/: run.py
SANDI_python_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
SANDI_python_toolbox/config/: snakebids.yml
SANDI_python_toolbox/workflow/: Snakefile
SANDI_python_toolbox/workflow/rules/: analyze_all_datasets.smk  process_all_datasets.smk  train_machine_learning_model.smk
SANDI_python_toolbox/workflow/scripts/: RiceMean.py  SphericalMeanFromSH.py  apply_MLP_python.py  apply_RF_python.py  build_training_set.py  drchrnd.py  llsFitSH.py  make_direction_average_SNR.py  make_direction_average_noisemap.py  my_murdaycotts.py  normalize_noisemap.py  run_model_fitting.py  setup_and_run_model_training.py  train_MLP_python.py  train_RF_python.py
docs/: conf.py  requirements.txt
docs/getting_started/: installation.rst
docs/usage/: app_cli.rst
