[tool.poetry]
name = "SANDI_python_toolbox"
version = "0.1.0"
description = "SANDI model fitting in python + BIDS handling"
authors = ["Bradley-Karat <bkarat@uwo.ca>"]
license = "BSD-2-Clause"
readme = "README.md"
packages = [{include = "SANDI_python_toolbox"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
snakebids = "^0.5.0"
snakemake = "^7.8.0"
numpy = "^1.21.6"
nibabel = "^4.0.0"
scipy = "^1.5.4"
scikit-image = "^0.17.2"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
