[tool.poetry]
name = "SANDI_python_toolbox"
version = "0.1.0"
description = "SANDI model fitting in python + BIDS handling"
authors = ["Bradley-Karat <bkarat@uwo.ca>"]
license = "BSD-2-Clause"
readme = "README.md"
packages = [{include = "SANDI_python_toolbox"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
snakebids = ">=0.5.1"
snakemake = ">=6.0.0"
numpy = "1.21.6"
nibabel = "^3.2.1"
scipy = "1.7.1"
scikit-image = "^0.19.3"
matplotlib = "3.4.2"
scikit-learn = "1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
